src/test/ui/editions/edition-keywords-2015-2018-parsing.stderr
error: no rules expected the token `r#async`
  --> $DIR/edition-keywords-2015-2018-parsing.rs:16:31
   |
LL |     r#async = consumes_async!(r#async);
   |                               ^^^^^^^ no rules expected this token in macro call

error: no rules expected the token `async`
  --> $DIR/edition-keywords-2015-2018-parsing.rs:17:35
   |
LL |     r#async = consumes_async_raw!(async);
   |                                   ^^^^^ no rules expected this token in macro call

error: aborting due to 2 previous errors

